--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-plugin-route-dictionary": "^1.0.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
     "gatsby-theme-blog": "^1.6.31",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
