--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.22.15",
+    "gatsby": "^2.24.47",
     "gatsby-plugin-route-dictionary": "^1.0.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
-    "gatsby-theme-blog": "^1.6.31",
+    "gatsby-theme-blog": "2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "resolutions": {
+    "@theme-ui/mdx": "0.4.0-rc.1",
+    "@theme-ui/core": "0.4.0-rc.1"
   }
 }
