Enable "core-js" experiment:
* gatsby@core-js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^2.22.15",
+    "gatsby": "^2.23.19-core-js.9",
     "gatsby-plugin-route-dictionary": "^1.0.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
     "gatsby-theme-blog": "^1.6.31",
